<resources>
    <string name="app_name">WeStory</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_register">Register</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_submit">Submit</string>
    <string name="login_to_register">Not a member? Join us now.</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_user_details_incorrect">Incorrect user details!</string>
    <string name="login_success">Congratulations %1$s, you are logged in!</string>
    <string name="welcome">Welcome</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_heritage_name">Lokum</string>
    <string name="hint_heritage_place">Middle East</string>
    <string name="hint_heritage_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae vehicula nibh, et tempor mi. Vivamus malesuada tincidunt risus, quis dapibus nibh mattis ut. Morbi gravida neque ac ligula malesuada fermentum. Pellentesque nec consequat ligula. Sed iaculis metus eu arcu venenatis malesuada.</string>
    <string name="hint_tag_text">Tag Text</string>
    <string name="hint_tag_context">Tag Context</string>
    <string name="hint_search">Search</string>
    <string name="comment_hint">Type your comment here</string>
    <string name="placeholder_short">WeStory</string>
    <string name="placeholder_mid">Cultural Heritage Story</string>
    <string name="placeholder_long">WeStory: Share your story. Make your own cultural history</string>
    <string name="photo_url_str"> http://smokymountainparkarabians.com/images/circle-mares.png</string>
    <string name="generic_name">Name:</string>
    <string name="heritage_place">Place:</string>
    <string name="heritage_creationDate">Created at:</string>
    <string name="heritage_small_see_posts"> -see Posts</string>
    <string name="post_small_see_heritages"> -see Heritages</string>
    <string name="btn_new_post">Add Post</string>
    <string name="btn_new_comment">Add Comment</string>
    <string name="btn_new_media">Add Media</string>
    <string name="generic_add">Add…</string>
    <string name="generic_description">Description:</string>
    <string name="generic_owner">Creator:</string>
    <string name="generic_title">Title:</string>
    <string name="generic_content">Content:</string>
    <string name="generic_by">by </string>
    <string name="generic_by_username">by %1$s</string>
    <string name="generic_created_at">Created at %1$s</string>
    <string name="generic_see_more"> - see more</string>
    <string name="generic_parenthesized">(%1$s)</string>
    <string name="generic_no_internet">Unable to perform this operation. Please check your internet connection.</string>
    <string name="generic_server_error">We are currently experiencing technical difficulties. Try again later!</string>
    <string name="post_post_date">Post Date:</string>
    <string name="post_last_edit_date">Last Edit Date:</string>
    <string name="post_view_title_default">Viewing Post</string>
    <string name="search_type">Search for:</string>

    <string name="nav_home">Home</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_post_feed">Post Feed</string>
    <string name="nav_heritages">Heritages</string>
    <string name="nav_recommendations">Recommendations</string>
    <string name="nav_add_heritage">Add Heritage</string>
    <string name="nav_posts">Posts</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_comments">Comments</string>
    <string name="nav_search">Search</string>

    <string name="title_heritage_new">New Heritage</string>
    <string name="title_post_new">New Post</string>
    <string name="title_generic_edit">Edit </string>
    <string name="textFollowMember">Follow</string>

    <string name="asciiError">Please enter English (ASCII) characters only.</string>

    <string-array name="search_types">
        <item>Heritage Name</item>
        <item>Post Title</item>
        <item>Semantic Tagged Heritages</item>
        <item>Semantic Tagged Posts</item>
    </string-array>
    <string-array name="heritage_view_list">
        <item>Posts</item>
        <item>Tags</item>
        <item>Media</item>
    </string-array>
    <string-array name="post_view_list">
        <item>Comments</item>
        <item>Heritages</item>
        <item>Tags</item>
        <item>Media</item>
    </string-array>
    <string-array name="heritage_view_singular_list">
        <item>Post</item>
        <item>Tag</item>
        <item>Media</item>
    </string-array>
    <string-array name="post_view_singular_list">
        <item>Comment</item>
        <item>Heritage</item>
        <item>Tag</item>
        <item>Media</item>
    </string-array>
    <string-array name="media_types">
        <item>Image</item>
        <item>Audio</item>
        <item>Video</item>
    </string-array>
</resources>
