<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navFeed" android:title="@string/nav_feed" />
    <item android:id="@+id/navPostFeed" android:title="@string/nav_post_feed" />
    <item android:id="@+id/navRecommendations" android:title="@string/nav_recommendations" />
    <item android:id="@+id/navHeritages" android:title="@string/nav_heritages" />
    <item android:id="@+id/navPosts" android:title="@string/nav_posts" />
    <item android:id="@+id/navProfile" android:title="@string/nav_profile" />
    <item android:id="@+id/navComments" android:title="@string/nav_comments" />
    <item android:id="@+id/navSearch" android:title="@string/nav_search"/>
    <item android:id="@+id/navLogin" android:title="@string/nav_login" />
</menu>