<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/primary_light"
        android:hint="@string/hint_username"
        android:textColorHint="@color/secondary_text"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:elevation="2dp"/>
    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/primary_light"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:elevation="2dp"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/accent"
        android:text="@string/btn_login"
        android:textColor="@color/primary_text"
        android:elevation="2dp"/>
    <TextView
        android:id="@+id/tvLoginToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_to_register"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/tvLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        android:textStyle="italic"/>
</LinearLayout>

