<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:padding="5dp">


    <TextView
        android:id="@+id/tvCommentSmallOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hint_username"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvCommentSmallCreationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/heritage_creationDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvCommentSmallCreationDateValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/placeholder_mid"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvCommentSmallCreationDate"
        android:layout_toEndOf="@+id/tvCommentSmallCreationDate" />

    <TextView
        android:id="@+id/tvCommentSmallContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hint_heritage_description"
        android:background="@color/accent"
        android:layout_below="@+id/tvCommentSmallOwner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>