<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary_light"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/relative_layout_margin">
        <TextView
            android:id="@+id/tvHeritageEditName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/generic_name"
            android:textSize="20sp"
            android:paddingTop="8dp"/>
        <EditText
            android:id="@+id/etHeritageEditName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvHeritageEditName"
            android:layout_toRightOf="@id/tvHeritageEditName"
            android:layout_toEndOf="@id/tvHeritageEditName"
            android:textColor="@color/primary_text"
            android:hint="@string/hint_heritage_name"
            android:textColorHint="@color/secondary_text"
            android:inputType="text"
            android:padding="@dimen/relative_layout_margin_between"
            android:singleLine="true" />
        <TextView
            android:id="@+id/tvHeritageEditPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etHeritageEditName"
            android:layout_alignStart="@id/tvHeritageEditName"
            android:layout_alignLeft="@id/tvHeritageEditName"
            android:text="@string/heritage_place"
            android:textSize="20sp"
            android:paddingTop="8dp"/>

        <EditText
            android:id="@+id/etHeritageEditPlace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvHeritageEditPlace"
            android:layout_toRightOf="@id/tvHeritageEditPlace"
            android:layout_toEndOf="@id/tvHeritageEditPlace"
            android:textColor="@color/primary_text"
            android:hint="@string/hint_heritage_place"
            android:textColorHint="@color/secondary_text"
            android:inputType="text"
            android:padding="@dimen/relative_layout_margin_between"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/tvHeritageEditDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tvHeritageEditPlace"
            android:layout_alignLeft="@id/tvHeritageEditPlace"
            android:layout_below="@id/etHeritageEditPlace"
            android:text="@string/generic_description"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btnHeritageSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/accent"
            android:text="@string/btn_submit"
            android:textColor="@color/primary_text"
            android:elevation="@dimen/btn_elevation"/>
        <EditText
            android:id="@+id/etHeritageEditDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHeritageEditDescription"
            android:layout_above="@id/btnHeritageSubmit"
            android:gravity="start"
            android:textColor="@color/primary_text"
            android:hint="@string/hint_heritage_description"
            android:textColorHint="@color/secondary_text"
            android:inputType="textMultiLine"
            android:padding="@dimen/relative_layout_margin_between"
            android:singleLine="false"/>


    </RelativeLayout>


</LinearLayout>

