<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary_light"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/relative_layout_margin">
    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/relative_layout_margin_between"
        android:background="@color/primary_light"
        android:hint="@string/hint_username"
        android:textColorHint="@color/secondary_text"
        android:padding="@dimen/relative_layout_margin_between"
        android:singleLine="true"
        android:elevation="@dimen/btn_elevation"/>
    <EditText android:id="@+id/etRegisterEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/relative_layout_margin_between"
        android:background="@color/primary_light"
        android:hint="@string/hint_email"
        android:textColorHint="@color/secondary_text"
        android:inputType="textEmailAddress"
        android:padding="@dimen/relative_layout_margin_between"
        android:singleLine="true"
        android:elevation="@dimen/btn_elevation"/>
    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/relative_layout_margin_between"
        android:background="@color/primary_light"
        android:hint="@string/hint_password"
        android:textColorHint="@color/secondary_text"
        android:inputType="textPassword"
        android:padding="@dimen/relative_layout_margin_between"
        android:singleLine="true"
        android:elevation="@dimen/btn_elevation"/>
    <EditText
        android:id="@+id/etRegisterPasswordConfirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/relative_layout_margin_between"
        android:background="@color/primary_light"
        android:hint="@string/hint_password_confirm"
        android:textColorHint="@color/secondary_text"
        android:inputType="textPassword"
        android:padding="@dimen/relative_layout_margin_between"
        android:singleLine="true"
        android:elevation="@dimen/btn_elevation"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/relative_layout_margin"
        android:background="@color/accent"
        android:text="@string/btn_register"
        android:textColor="@color/primary_text"
        android:elevation="@dimen/btn_elevation"/>
</LinearLayout>