<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary_light"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="@dimen/relative_layout_margin">
    <TextView
        android:id="@+id/tvHeritageViewPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/heritage_place"
        android:textSize="20sp"
        android:layout_margin="@dimen/relative_layout_margin_between"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHeritageViewPlaceValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tvHeritageViewPlace"
        android:layout_toRightOf="@id/tvHeritageViewPlace"
        android:layout_toEndOf="@id/tvHeritageViewPlace"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/primary_light"
        android:text="@string/placeholder_mid"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:textSize="20sp"
        android:singleLine="true"
        android:layout_marginRight="@dimen/relative_layout_margin_between"
        android:layout_marginEnd="@dimen/relative_layout_margin_between"/>
    <TextView
        android:id="@+id/tvHeritageViewCreationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeritageViewPlace"
        android:layout_alignLeft="@id/tvHeritageViewPlace"
        android:layout_alignStart="@id/tvHeritageViewPlace"
        android:text="@string/heritage_creationDate"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvHeritageViewCreationDateValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tvHeritageViewCreationDate"
        android:layout_alignRight="@id/tvHeritageViewPlaceValue"
        android:layout_alignEnd="@id/tvHeritageViewPlaceValue"
        android:layout_toRightOf="@id/tvHeritageViewCreationDate"
        android:layout_toEndOf="@id/tvHeritageViewCreationDate"
        android:background="@color/primary_light"
        android:text="@string/placeholder_mid"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:id="@+id/tvHeritageViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeritageViewCreationDate"
        android:layout_alignLeft="@id/tvHeritageViewCreationDate"
        android:layout_alignStart="@id/tvHeritageViewCreationDate"
        android:text="@string/generic_description"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/relative_layout_margin_between"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvHeritageViewDescriptionValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvHeritageViewDescription"
        android:layout_alignStart="@id/tvHeritageViewDescription"
        android:layout_alignRight="@id/tvHeritageViewCreationDateValue"
        android:layout_alignEnd="@id/tvHeritageViewCreationDateValue"
        android:layout_below="@id/tvHeritageViewDescription"
        android:background="@color/primary_light"
        android:text="@string/hint_heritage_description"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/relative_layout_margin_between"/>
    <LinearLayout
        android:id="@+id/llHeritageViewButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeritageViewDescriptionValue"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/relative_layout_margin_between">
        <Button
            android:id="@+id/btnHeritageEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/accent"
            android:text="@string/btn_edit"
            android:textColor="@color/primary_light"
            android:elevation="@dimen/btn_elevation"/>
        <Button
            android:id="@+id/btnHeritageNewPost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/accent"
            android:text="@string/btn_new_post"
            android:textColor="@color/primary_light"
            android:elevation="@dimen/btn_elevation"/>
        <Button
            android:id="@+id/btnHeritageNewMedia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/accent"
            android:text="@string/btn_new_media"
            android:textColor="@color/primary_light"
            android:elevation="@dimen/btn_elevation"/>
    </LinearLayout>
</RelativeLayout>

